--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-redux-hmr-boilerplate",
-  "version": "1.0.0",
-  "description": "",
+  "name": "setlistify",
+  "version": "0.1.0",
+  "description": "Create playlists from setlist.fm setlists automatically.",
   "main": "src/index.js",
   "scripts": {
     "clean": "rm -rf dist",
@@ -21,14 +21,9 @@
     "babel-eslint": "^6.0.0-beta.1",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
     "chai": "^3.5.0",
     "css-loader": "^0.23.1",
     "eslint": "^2.3.0",
-    "eslint-plugin-react": "^4.2.0",
-    "express": "^4.13.4",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "mocha": "^2.4.5",
     "node-sass": "^3.4.2",
     "nodemon": "^1.9.1",
     "sass-loader": "^3.1.2",
@@ -38,8 +33,7 @@
     "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
     "webpack-dev-middleware": "^1.5.1",
-    "webpack-hot-middleware": "^2.9.1",
-    "jsdom": "^8.3.0"
+    "webpack-hot-middleware": "^2.9.1"
   },
   "eslintConfig": {
     "env": {
@@ -47,6 +41,15 @@
     }
   },
   "dependencies": {
-    "express": "^4.14.0"
+    "axios": "^0.13.1",
+    "body-parser": "^1.15.2",
+    "cookie-session": "^2.0.0-alpha.1",
+    "express": "^4.14.0",
+    "lodash": "^4.15.0",
+    "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-spotify": "^0.3.0",
+    "pg": "^6.1.0",
+    "pg-promise": "^5.3.1"
   }
 }
